k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-shield-service
  labels:   
    app: git-shield
spec:
  selector:
    app: git-shield  
  ports:
    - name: http
      protocol: TCP
      port: 80         
      targetPort: 4123    
  type: LoadBalancer
